Add header with logo and menu button

--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Jake's Portfolio</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #3C3A39;
+            padding: 12px 24px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        #logo {
+            font-family: 'Roboto', sans-serif;
+            font-size: 18px;
+            color: #fff;
+        }
+        #menu-button {
+            background: url(images/Icons/Union.png) no-repeat center center/cover;
+            width: 18px;
+            height: 12px;
+        }
+    </style>
 </head>
+
 <body>
-    
+    <header>
+        <div id="logo">Jake Felice</div>
+        <div id="menu-button"></div>
+    </header>
 </body>
+
 </html>
