--- a/index.html
+++ b/index.html
@@ -10,31 +10,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Jake's Portfolio</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            background-color: #3C3A39;
-            padding: 12px 24px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        #logo {
-            font-family: 'Roboto', sans-serif;
-            font-size: 18px;
-            color: #fff;
-        }
-        #menu-button {
-            background: url(images/Icons/Union.png) no-repeat center center/cover;
-            width: 18px;
-            height: 12px;
-        }
-    </style>
 </head>
 
 <body>
@@ -42,6 +17,17 @@
         <div id="logo">Jake Felice</div>
         <div id="menu-button"></div>
     </header>
+    <section id="intro">
+        <div id="intro-content">
+            <h1>Hey There. I'm Jake</h1>
+            <h3>I am a Software Developer</h3>
+            <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+            don’t hestiate to contact me.</p>
+        </div>
+        <div class="social-icons">
+
+        </div>
+    </section>
 </body>
 
 </html>
