--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
         <div id="intro-content">
             <h1>Hey There. I'm Jake</h1>
             <h3>I am a Software Developer</h3>
-            <p>I can help you build a product , feature or website Look through some of my work and experience! If you
-                like what you see and have a project you need coded,
-                don’t hestiate to contact me.</p>
+            <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
         </div>
         <div class="social-icons">
+            <a target="_black" href="#" class="social-icons" id="medium"></a>
+            <a target="_black" href="https://twitter.com/jasonfelice0" class="social-icons" id="twitter"></a>
+            <a target="_black" href="#" class="social-icons" id="logo"></a>
+            <a target="_black" href="#" class="social-icons" id="linkedin"></a>
+            <a target="_black" href="https://github.com/jasonfelice" class="social-icons" id="github"></a>
         </div>
     </section>
 </body>
