Fix floating logo in the header logo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <div id="logo">Jake Felice</div>
+        <div id="head_logo">Jake Felice</div>
         <div id="menu-button"></div>
     </header>
     <section id="intro">
