Update index.html to fix social icons target value

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
         </div>
         <div class="social-icons">
-            <a target="_black" href="#" class="social-icons" id="medium"></a>
-            <a target="_black" href="https://twitter.com/jasonfelice0" class="social-icons" id="twitter"></a>
-            <a target="_black" href="#" class="social-icons" id="logo"></a>
-            <a target="_black" href="#" class="social-icons" id="linkedin"></a>
-            <a target="_black" href="https://github.com/jasonfelice" class="social-icons" id="github"></a>
+            <a target="_blank" href="#" class="social-icons" id="medium"></a>
+            <a target="_blank" href="https://twitter.com/jasonfelice0" class="social-icons" id="twitter"></a>
+            <a target="_blank" href="#" class="social-icons" id="logo"></a>
+            <a target="_blank" href="#" class="social-icons" id="linkedin"></a>
+            <a target="_blank" href="https://github.com/jasonfelice" class="social-icons" id="github"></a>
         </div>
     </section>
 </body>
