Edit the code to make it semantically better

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,11 +13,10 @@
     <link rel="stylesheet" href="style.css">
     <title>Jake's Portfolio</title>
 </head>
-
 <body>
     <header>
-        <div id="head_logo">Jake Felice</div>
-        <div id="menu-button"></div>
+        <a href="#" id="head_logo">Jake Felice</a>
+        <nav id="menu-button"></nav>
     </header>
     <section id="intro">
         <div id="intro-content">
@@ -27,13 +25,14 @@
             <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
         </div>
         <div class="social-icons">
-            <a target="_blank" href="#" class="social-icons" id="medium"></a>
-            <a target="_blank" href="https://twitter.com/jasonfelice0" class="social-icons" id="twitter"></a>
-            <a target="_blank" href="#" class="social-icons" id="logo"></a>
-            <a target="_blank" href="#" class="social-icons" id="linkedin"></a>
-            <a target="_blank" href="https://github.com/jasonfelice" class="social-icons" id="github"></a>
+            <ul>
+                <li><a target="_blank" href="https://medium.com/" class="social-icons" id="medium"></a></li>
+                <li><a target="_blank" href="https://twitter.com/jasonfelice0" class="social-icons" id="twitter"></a></li>
+                <li><a target="_blank" href="#" class="social-icons" id="logo"></a></li>
+                <li><a target="_blank" href="https://www.linkedin.com/in/jason-felice-11a5a622b/" class="social-icons" id="linkedin"></a></li>
+                <li><a target="_blank" href="https://github.com/jasonfelice" class="social-icons" id="github"></a></li>
+            </ul>    
         </div>
     </section>
 </body>
-
 </html>
