--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         </div>
         <div class="social-icons">
             <ul>
-                <li><a target="_blank" href="https://medium.com/" class="social-icons" id="medium"></a></li>
-                <li><a target="_blank" href="https://twitter.com/jasonfelice0" class="social-icons" id="twitter"></a></li>
-                <li><a target="_blank" href="#" class="social-icons" id="logo"></a></li>
-                <li><a target="_blank" href="https://www.linkedin.com/in/jason-felice-11a5a622b/" class="social-icons" id="linkedin"></a></li>
-                <li><a target="_blank" href="https://github.com/jasonfelice" class="social-icons" id="github"></a></li>
+                <li><a target="_blank" rel="noopener" href="https://medium.com/" class="social-icons" id="medium"></a></li>
+                <li><a target="_blank" rel="noopener" href="https://twitter.com/jasonfelice0" class="social-icons" id="twitter"></a></li>
+                <li><a target="_blank" rel="noopener" href="#" class="social-icons" id="logo"></a></li>
+                <li><a target="_blank" rel="noopener" href="https://www.linkedin.com/in/jason-felice-11a5a622b/" class="social-icons" id="linkedin"></a></li>
+                <li><a target="_blank" rel="noopener" href="https://github.com/jasonfelice" class="social-icons" id="github"></a></li>
             </ul>    
         </div>
     </section>
