--- a/index.html
+++ b/index.html
@@ -16,30 +16,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Crete+Round&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Jake's Portfolio</title>
-    <style>
-        #work{
-            font-family: 'Crete Round', serif;
-        }
-
-        .heading {
-            margin-top: 120px;
-            text-align: center;
-            color: #1c1a19;
-            font-size: 40px;
-        }
-        
-        .horizontal-seperator {
-            border: 1px solid #21212180;
-            border-radius: 5px;
-            margin: 24px 24px 80px;
-        }
-
-        .work-card-container {
-            display: grid;
-            grid-template-columns: auto;
-            justify-content: center;
-        }
-    </style>
 </head>
 
 <body>
@@ -73,7 +49,7 @@
         <hr class="horizontal-seperator">
         <div class="work-card-container">
             <div class="first-card">
-                <div class="image"></div>
+                <img src="images/portfolio/first-image-placeholder.png" alt="Place holder imaage" id="first-work-image">
                 <div class="content">
                   <h1>Multi-Post Stories</h1>
                   <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
