--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crete+Round&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Jake's Portfolio</title>
 </head>
@@ -50,18 +53,33 @@
         <div class="work-card-container">
             <div class="first-card">
                 <img src="images/portfolio/first-image-placeholder.png" alt="Place holder imaage" id="first-work-image">
-                <div class="content">
-                  <h1>Multi-Post Stories</h1>
-                  <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
-                  <ul class="languages">
-                    <li><span>css</span></li>
-                    <li><span>html</span></li>
-                    <li><span>bootstrap</span></li>
-                    <li><span>Ruby</span></li>
-                  </ul>
-                  <button id="see-project-button-first" type="button">See Project</button>
+                <div class="content-one">
+                    <h1>Multi-Post Stories</h1>
+                    <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the
+                        industry's standard dummy text ever since the 1500s, when an unknown printer took a standard
+                        dummy text.</p>
+                    <ul class="languages">
+                        <li><span>css</span></li>
+                        <li><span>html</span></li>
+                        <li><span>bootstrap</span></li>
+                        <li><span>Ruby</span></li>
+                    </ul>
+                    <button id="see-project-button-first" type="button">See Project</button>
                 </div>
-              </div>
+            </div>
+            <div class="cards">
+                <div class="content">
+                    <h1>Profesional Art Printing Data</h1>
+                    <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the
+                        industry's standard</p>
+                    <ul class="languages other-cards-info">
+                        <li><span>html</span></li>
+                        <li><span>bootstrap</span></li>
+                        <li><span>Ruby</span></li>
+                    </ul>
+                </div>
+                <button class="see-project-button" type="button">See Project</button>
+            </div>
         </div>
     </section>
 </body>
