Add all the card to the portfolio section

--- a/index.html
+++ b/index.html
@@ -80,6 +80,71 @@
                 </div>
                 <button class="see-project-button" type="button">See Project</button>
             </div>
+            <div class="cards">
+                <div class="content">
+                    <h1>Profesional Art Printing Data</h1>
+                    <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the
+                        industry's standard</p>
+                    <ul class="languages other-cards-info">
+                        <li><span>html</span></li>
+                        <li><span>bootstrap</span></li>
+                        <li><span>Ruby</span></li>
+                    </ul>
+                </div>
+                <button class="see-project-button" type="button">See Project</button>
+            </div>
+            <div class="cards">
+                <div class="content">
+                    <h1>Profesional Art Printing Data</h1>
+                    <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the
+                        industry's standard</p>
+                    <ul class="languages other-cards-info">
+                        <li><span>html</span></li>
+                        <li><span>bootstrap</span></li>
+                        <li><span>Ruby</span></li>
+                    </ul>
+                </div>
+                <button class="see-project-button" type="button">See Project</button>
+            </div>
+            <div class="cards">
+                <div class="content">
+                    <h1>Profesional Art Printing Data</h1>
+                    <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the
+                        industry's standard</p>
+                    <ul class="languages other-cards-info">
+                        <li><span>html</span></li>
+                        <li><span>bootstrap</span></li>
+                        <li><span>Ruby</span></li>
+                    </ul>
+                </div>
+                <button class="see-project-button" type="button">See Project</button>
+            </div>
+            <div class="cards">
+                <div class="content">
+                    <h1>Profesional Art Printing Data</h1>
+                    <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the
+                        industry's standard</p>
+                    <ul class="languages other-cards-info">
+                        <li><span>html</span></li>
+                        <li><span>bootstrap</span></li>
+                        <li><span>Ruby</span></li>
+                    </ul>
+                </div>
+                <button class="see-project-button" type="button">See Project</button>
+            </div>
+            <div class="cards">
+                <div class="content">
+                    <h1>Profesional Art Printing Data</h1>
+                    <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the
+                        industry's standard</p>
+                    <ul class="languages other-cards-info">
+                        <li><span>html</span></li>
+                        <li><span>bootstrap</span></li>
+                        <li><span>Ruby</span></li>
+                    </ul>
+                </div>
+                <button class="see-project-button" type="button">See Project</button>
+            </div>
         </div>
     </section>
 </body>
