--- a/index.html
+++ b/index.html
@@ -147,6 +147,21 @@
             </div>
         </div>
     </section>
+    <section id="about-me">
+        <h1 class="about-me-heading">About me</h1>
+        <div class="about-me-introduction">
+            <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+            <button class="see-project-button" id="resume-button" type="button">Get My Resume</button>
+        </div>
+        <hr class="horizontal-seperator-on-dark">
+        <div class="about-myself">
+            <div class="language-section">
+                <div id="languages">
+                    <h2>Language</h2>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
