Add section that lists skills

--- a/index.html
+++ b/index.html
@@ -150,17 +150,52 @@
     <section id="about-me">
         <h1 class="about-me-heading">About me</h1>
         <div class="about-me-introduction">
-            <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+            <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of
+                my work and experience! If you like what you see and have a project you need coded, don’t hestiate to
+                contact me.</p>
             <button class="see-project-button" id="resume-button" type="button">Get My Resume</button>
         </div>
         <hr class="horizontal-seperator-on-dark">
-        <div class="about-myself">
-            <div class="language-section">
-                <div id="languages">
-                    <h2>Language</h2>
+            <div class="about-myself language-section">
+                <div class="language-section">
+                    <div class="list-style" id="languages">
+                        <div class="diamond"></div>
+                        <h2>Language</h2>
+                    </div>
+                    <ul class="about-section-content">
+                        <li>Javascript</li>
+                        <li>Ruby</li>
+                        <li>Html</li>
+                        <li>Css</li>
+                    </ul>
+                </div>
+                <div class="language-section">
+                    <div class="list-style" id="frameworks">
+                        <div class="square"></div>
+                        <h2>Frameworks</h2>
+                    </div>
+                    <ul class="about-section-content">
+                        <li>Bootstrap</li>
+                        <li>Ruby on Rails</li>
+                        <li>RSPec</li>
+                        <li>CapyBara</li>
+                        <li>Selenium</li>
+                    </ul>
+                </div>
+                <div class="language-section">
+                    <div class="list-style" id="skills">
+                        <div class="circle"></div>
+                        <h2>Skills</h2>
+                    </div>
+                    <ul class="about-section-content">
+                        <li>Codekit</li>
+                        <li>Github</li>
+                        <li>Codepen</li>
+                        <li>Gitlab</li>
+                        <li>Terminal</li>
+                    </ul>
                 </div>
             </div>
-        </div>
     </section>
 </body>
 
