--- a/index.html
+++ b/index.html
@@ -200,6 +200,22 @@
                 </div>
             </div>
     </section>
+    <section id="contact-me">
+        <p>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
+        <form action="">
+            <ul>
+                <li>
+                    <label><input type="text" name="fullName" placeholder="Full name"></label>
+                </li>
+                <li>
+                    <label><input type="email" name="email" placeholder="Email"></label>
+                </li>
+                <li>
+                    <label><textarea name="message"></textarea></label>
+                </li>
+            </ul>
+        </form>
+    </section>
 </body>
 
 </html>
