Style input elements

--- a/index.html
+++ b/index.html
@@ -201,20 +201,22 @@
             </div>
     </section>
     <section id="contact-me">
+        <div class="end-wrapper">
         <p>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
         <form action="">
             <ul>
                 <li>
-                    <label><input type="text" name="fullName" placeholder="Full name"></label>
+                    <input type="text" name="fullName" placeholder="Full name">
                 </li>
                 <li>
-                    <label><input type="email" name="email" placeholder="Email"></label>
+                    <input type="email" name="email" placeholder="Email">
                 </li>
                 <li>
-                    <label><textarea name="message"></textarea></label>
+                    <textarea name="message" placeholder="Enter text here"></textarea>
                 </li>
             </ul>
         </form>
+    </div>
     </section>
 </body>
 
