Add footer, submit button and footer

--- a/index.html
+++ b/index.html
@@ -214,10 +214,31 @@
                 <li>
                     <textarea name="message" placeholder="Enter text here"></textarea>
                 </li>
+                <li class="btn">
+                    <button type="submit" class="see-project-button">Get in touch</button>
+                </li>
             </ul>
         </form>
     </div>
+
+    <hr class="divider">
+    <footer class="footer-icon">
+        <ul>
+            <li><a target="_blank" rel="noopener" href="https://medium.com/" class="social-icons" id="medium"></a>
+            </li>
+            <li><a target="_blank" rel="noopener" href="https://twitter.com/jasonfelice0" class="social-icons"
+                    id="twitter"></a></li>
+            <li><a target="_blank" rel="noopener" href="#" class="social-icons" id="logo"></a></li>
+            <li><a target="_blank" rel="noopener" href="https://www.linkedin.com/in/jason-felice-11a5a622b/"
+                    class="social-icons" id="linkedin"></a></li>
+            <li><a target="_blank" rel="noopener" href="https://github.com/jasonfelice" class="social-icons"
+                    id="github"></a></li>
+        </ul>
+    
+</footer>
     </section>
+   
+    
 </body>
 
 </html>
