Fix linter errors

--- a/index.html
+++ b/index.html
@@ -35,15 +35,13 @@
         </div>
         <div class="social-icons">
             <ul>
-                <li><a target="_blank" rel="noopener" href="https://medium.com/" class="social-icons" id="medium"></a>
+                <li><a target="_blank" rel="noopener" href="https://medium.com/" class="social-icons medium"></a>
                 </li>
-                <li><a target="_blank" rel="noopener" href="https://twitter.com/jasonfelice0" class="social-icons"
-                        id="twitter"></a></li>
-                <li><a target="_blank" rel="noopener" href="#" class="social-icons" id="logo"></a></li>
+                <li><a target="_blank" rel="noopener" href="https://twitter.com/jasonfelice0" class="social-icons twitter"></a></li>
+                <li><a target="_blank" rel="noopener" href="#" class="social-icons logo"></a></li>
                 <li><a target="_blank" rel="noopener" href="https://www.linkedin.com/in/jason-felice-11a5a622b/"
-                        class="social-icons" id="linkedin"></a></li>
-                <li><a target="_blank" rel="noopener" href="https://github.com/jasonfelice" class="social-icons"
-                        id="github"></a></li>
+                        class="social-icons linkedin"></a></li>
+                <li><a target="_blank" rel="noopener" href="https://github.com/jasonfelice" class="social-icons github"></a></li>
             </ul>
         </div>
         
@@ -203,7 +201,7 @@
     </section>
     <section id="contact-me">
         <div class="end-wrapper">
-        <p>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
+        <h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
         <form action="https://formspree.io/f/mdobdvjd" method="post">
             <ul>
                 <li>
@@ -225,15 +223,13 @@
     <hr class="divider">
     <div class="footer-icon">
         <ul>
-            <li><a target="_blank" rel="noopener" href="https://medium.com/" class="social-icons" id="medium"></a>
+            <li><a target="_blank" rel="noopener" href="https://medium.com/" class="social-icons medium"></a>
             </li>
-            <li><a target="_blank" rel="noopener" href="https://twitter.com/jasonfelice0" class="social-icons"
-                    id="twitter"></a></li>
-            <li><a target="_blank" rel="noopener" href="#" class="social-icons" id="logo"></a></li>
+            <li><a target="_blank" rel="noopener" href="https://twitter.com/jasonfelice0" class="social-icons twitter"></a></li>
+            <li><a target="_blank" rel="noopener" href="#" class="social-icons logo"></a></li>
             <li><a target="_blank" rel="noopener" href="https://www.linkedin.com/in/jason-felice-11a5a622b/"
-                    class="social-icons" id="linkedin"></a></li>
-            <li><a target="_blank" rel="noopener" href="https://github.com/jasonfelice" class="social-icons"
-                    id="github"></a></li>
+                    class="social-icons linkedin"></a></li>
+            <li><a target="_blank" rel="noopener" href="https://github.com/jasonfelice" class="social-icons github"></a></li>
         </ul>
     
     </div>
