--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
             <p>I can help you build a product , feature or website Look through some of my work and experience! If you
                 like what you see and have a project you need coded, don’t hestiate to contact me.</p>
         </div>
-        <div class="social-icons">
-            <ul>
+            <ul class="intro-icons">
                 <li><a target="_blank" rel="noopener" href="https://medium.com/" class="social-icons medium"></a>
                 </li>
                 <li><a target="_blank" rel="noopener" href="https://twitter.com/jasonfelice0" class="social-icons twitter"></a></li>
@@ -44,7 +43,6 @@
                         class="social-icons linkedin"></a></li>
                 <li><a target="_blank" rel="noopener" href="https://github.com/jasonfelice" class="social-icons github"></a></li>
             </ul>
-        </div>
         
     </section>
     <section id="work">
