Add and style the  desktop navigation bar

--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
     <header>
         <a href="#" id="head_logo">Jake Felice</a>
         <nav id="menu-button"></nav>
+        <nav id="main-nav">
+            <ul>
+            <li><a href="#work">Portfolio</a></li>
+            <li><a href="#about-me">About</a></li>
+            <li><a href="#contact-me">Contact</a></li>
+            <li><a class="message-button" href="#contact-me"></a></li>
+        </ul>
+        </nav>
     </header>
     <section id="intro">
         <div id="intro-content">
