Complete portfolio section for desktop

--- a/index.html
+++ b/index.html
@@ -54,11 +54,14 @@
         
     </section>
     <section id="work">
+        <div class="heading-and-seperator">
         <h1 class="heading">My Recent Works</h1>
         <hr class="horizontal-seperator">
+        </div>
         <div class="work-card-container">
             <div class="first-card">
                 <img src="images/portfolio/first-image-placeholder.png" alt="Place holder imaage" id="first-work-image">
+                <img src="images/portfolio/first-image-placeholder-desktop.svg" alt="Place holder imaage" id="first-work-image-desktop">
                 <div class="content-one">
                     <h1>Multi-Post Stories</h1>
                     <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the
