Finish styling about section for desktop

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <div class="background-graphic"></div>
         </div>
         <hr class="horizontal-seperator-on-dark">
-            <div class="about-myself language-section">
+            <div class="about-myself">
                 <div class="language-section">
                     <div class="list-style" id="languages">
                         <div class="diamond"></div>
