--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     </section>
     <section id="contact-me">
         <div class="end-wrapper">
-        <h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2>
+            <div><h2>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h2></div>
         <form action="https://formspree.io/f/mdobdvjd" method="post">
             <ul>
                 <li>
