Add event listener to the hamburger button

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media.css">
+    <script src="script.js" defer></script>
     <title>Jake's Portfolio</title>
     <style>
         .mobile-menu {
