Add cross button that closes the menu ui

--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
 <body>
     <header>
         <a href="#" id="head_logo">Jake Felice</a>
-        <div class="menu-button">
+        <i class="menu-button"></i>
             <!-- Mobile menu container -->
-            <div class="mobile-menu">
+            <nav class="mobile-menu">
                 <ul>
                     <li><a href="#work">Portfolio</a></li>
                     <li><a href="#about-me">About</a></li>
                     <li><a href="#contact-me">Contact</a></li>
                 </ul>
-            </div>
+            </nav>
             <!-- ^^^ Mobile meny container ^^^ -->
-        </div>
+        
         <nav id="main-nav">
             <ul>
                 <li><a href="#work">Portfolio</a></li>
