--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             font-weight: 700;
             color: #fff;
             padding: 10px;
+            transition: all 0.5s ease-in-out;
         }
 
         .mobile-menu ul li::after {
