--- a/index.html
+++ b/index.html
@@ -35,25 +35,26 @@
         }
 
         .project-details-modal {
+            margin: auto;
             box-sizing: border-box;
+            background-color: #fff;
+            padding: 50px 16px;
+            width: 90vw;
             display: flex;
             flex-direction: column;
-            padding: 16px;
-            height: 85vh;
-            width: 90vw;
-            border: 1px solid green;
-            background-color: #fff;
-            margin: auto;
+            gap: 24px 0;
+            box-shadow: 0px 0px 3px 0px black;
+
         }
 
-        .modal-header h3 {
+        .modal-head h3 {
             font-family: "Roboto", sans-serif;
             font-weight: 700;
             font-size: 32px;
             line-height: 44px;
         }
 
-        .modal-header {
+        .modal-head {
             align-self: stretch;
             display: flex;
             justify-content: space-around;
@@ -64,6 +65,19 @@
             background: url(images/Icons/dark-x-icon.png) no-repeat center center/cover;
             width: 14px;
             height: 14px;
+        }
+
+        .project-modal-header {
+            display: flex;
+            flex-direction: column;
+            gap: 40px 0;
+            align-self: stretch;
+        }
+
+        .modal-buttons {
+            display: flex;
+            justify-content: space-between;
+            gap: 0 20px;
         }
     </style>
 </head>
@@ -219,15 +233,23 @@
         <!-- Modals -->
         <div class="project-details-modal-background">
             <div class="project-details-modal">
-                <div class="modal-header">
-                    <h3>Multi Post Stories</h3>
-                    <i class="dark-cross-button"></i>
+                <div class="project-modal-header">
+                    <div class="modal-head">
+                        <h3>Multi Post Stories</h3>
+                        <i class="dark-cross-button"></i>
+                    </div>
+                    <ul class="languages">
+                        <li><span>html</span></li>
+                        <li><span>Bootstrap</span></li>
+                        <li><span>Ruby on rails</span></li>
+                    </ul>
                 </div>
-                <ul class="languages">
-                    <li><span>html</span></li>
-                    <li><span>Bootstrap</span></li>
-                    <li><span>Ruby on rails</span></li>
-                </ul>
+                <img src="images/portfolio/snapshoot-portfolio.png" alt="Portfolio snapshot image">
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essent</p>
+                <div class="modal-buttons">
+                    <div class="btns" type="button">See Live</div>
+                    <div class="btns" type="button">See Source</div>
+                </div>
             </div>
         </div>
         <!-- Modals -->
