Add javaScript to popup project detials modal on click

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <li><span>bootstrap</span></li>
                         <li><span>Ruby</span></li>
                     </ul>
-                    <button id="see-project-button-first" type="button">See Project</button>
+                    <button id="see-project-button-first" class="see-project-button" type="button">See Project</button>
                 </div>
             </div>
             <div class="cards">
@@ -175,7 +175,7 @@
             </div>
         </div>
         <!-- Modals -->
-        <div class="project-details-modal-background">
+        <div class="project-details-modal-background disappear">
             <div class="project-details-modal">
                 <div class="project-modal-header">
                     <div class="modal-head">
