Fix linter errors

--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
                             galley of type and scrambled it to make a type specimen book. It has survived not only five
                             centuries, but also the leap into electronic typesetting, remaining essent</p>
                         <div class="modal-buttons">
-                            <div class="btns" type="button">See Live</div>
-                            <div class="btns" type="button">See Source</div>
+                            <div class="btns">See Live</div>
+                            <div class="btns">See Source</div>
                         </div>
                     </div>
                 </div>
