Add icons to buttons on the modals

--- a/index.html
+++ b/index.html
@@ -24,6 +24,25 @@
     <link rel="stylesheet" href="media.css">
     <script src="script.js" defer></script>
     <title>Jake's Portfolio</title>
+    <style>
+        .live-icon {
+            background: url(images/Icons/icon-see-live.svg) no-repeat center center/cover;
+            width: 18px;
+            height: 18px;
+        }
+
+        .source-icon {
+            background: url(images/Icons/source-icon.svg) no-repeat center center/cover;
+            width: 18px;
+            height: 18px;
+        }
+
+        .modal-buttons div {
+            align-items: center;
+            gap: 15px;
+            display: flex;
+        }
+    </style>
 </head>
 
 <body>
@@ -179,7 +198,7 @@
                 <div class="project-modal-header">
                     <div class="modal-head">
                         <h3 class="modal-heading-mobile">Multi Post Stories</h3>
-                        <h3 class="modal-heading-desktop">Keeping track of hundreds  of components website</h3>
+                        <h3 class="modal-heading-desktop">Keeping track of hundreds of components website</h3>
                         <i class="dark-cross-button"></i>
                     </div>
                     <ul class="languages">
@@ -196,8 +215,8 @@
                             galley of type and scrambled it to make a type specimen book. It has survived not only five
                             centuries, but also the leap into electronic typesetting, remaining essent</p>
                         <div class="modal-buttons">
-                            <div class="btns">See Live</div>
-                            <div class="btns">See Source</div>
+                            <div class="btns"><span>See Live</span> <i class="live-icon"></i></div>
+                            <div class="btns"><span>See Source</span> <i class="source-icon"></i> </div>
                         </div>
                     </div>
                 </div>
