Add custom email validation to the form

--- a/index.html
+++ b/index.html
@@ -296,7 +296,8 @@
                         <textarea name="message" placeholder="Enter text here" required maxlength="500"></textarea>
                     </li>
                     <li class="btn">
-                        <button type="submit" class="see-project-button">Get in touch</button>
+                        <button type="submit" class="btns">Get in touch</button>
+                        <span class="form-error-message"></span>
                     </li>
                 </ul>
             </form>
