Fix bug: Form resetting the data retrieved from storage when updating the other input fields

--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@
                     </li>
                     <li class="btn">
                         <button type="submit" class="btns">Get in touch</button>
+                        <button type="reset" class="btns">Reset</button>
                         <span class="form-error-message"></span>
                     </li>
                 </ul>
